--- a/01-easyTask/angular.json
+++ b/01-easyTask/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "first-angular-appg": {
+    "easyTask": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/first-angular-appg",
+            "outputPath": "dist/easy-task",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -21,6 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -59,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "first-angular-appg:build:production"
+              "buildTarget": "easyTask:build:production"
             },
             "development": {
-              "buildTarget": "first-angular-appg:build:development"
+              "buildTarget": "easyTask:build:development"
             }
           },
           "defaultConfiguration": "development"
